Set up redux, some basic actions.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -12,6 +12,8 @@
         font-size: 16px;
       }
     </style>
+
+    <link rel="stylesheet" href="../../node_modules/@icon/stroke-7/stroke-7.css" />
   </head>
   <body> 
     <div id="app"></div>
