--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -12,11 +12,9 @@
         font-size: 16px;
       }
     </style>
-
-    <link rel="stylesheet" href="../../node_modules/@icon/stroke-7/stroke-7.css" />
   </head>
   <body> 
     <div id="app"></div>
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="./bundle.js"></script>
   </body>
 </html>
