firebase deployment config

--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
     <title>homotopy.io</title>
     <style>
       html, body, #app {
@@ -13,8 +14,8 @@
       }
     </style>
   </head>
-  <body> 
+  <body>
     <div id="app"></div>
-    <script type="text/javascript" src="./bundle.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
