tikz export WIP

--- a/assets/index.html
+++ b/assets/index.html
@@ -28,6 +28,10 @@
             {left: "\\(", right: "\\)", display: false}
           ]
         });'></script>
+
+    <!-- render TikZ -->
+    <link rel="stylesheet" type="text/css" href="fonts.css">
+    <script src="tikzjax.js"></script>
   </head>
   <body>
     <div id="app"></div>
